Release history for Dist-Zilla-Plugin-Prereqs-Soften

{{$NEXT}}

0.001000 2014-02-18T02:43:56Z
 - First version.

 [Dependencies::Aggregate]
 - 5.008 : 201
 - 5.010 : 180
 - 5.019 : 161
