@@ -1,6 +1,9 @@
 Release history for Dist-Zilla-Plugin-Prereqs-Soften
 
 {{$NEXT}}
+ [00 Minor]
+ - Add property `to_relationship` that specifies the target relationship
+   kind to map to.
 
 0.001000 2014-02-18T02:43:56Z
  - First version.
